Finished store menu code